# ProVAI

./: .dockerignore  .env.template  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tox.ini
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  chore.md  config.yml  feature_request.md  research_spike.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0a1b8026277c_initial_complete_schema.py  1ac279270d8d_add_storage_path_with_unique_constraint_.py  24b369b2aa31_implement_assistant_domain_model.py  5750a99b38f5_add_invitation_model.py  5b58539261df_initial_feature_models.py  5d4a51e2b125_initial_database_schema.py  834987048681_implement_initial_domain_model.py  931436940d71_initial_core_models.py  98a3d5a24453_rename_link_tables_to_remove__link_.py  9b07f75201b8_cascade_delete_chats_from_tutor.py  c704c0199d6c_refactor_invitation_model_to_simplified_.py  cbe7aec7e893_add_title_to_chat_model.py
assets/: embedding_models.yml  llms.yml  sample_docs.yml
docker/: app.Dockerfile  backend.Dockerfile
docs/: ARCHITECTURE.md  INFRASTRUCTURE.md  MODULES.md  PILLARS.md  PROJECT-MODULES.md  RAG-FLOW.md  RAG-PIPELINE.md  REFERENCES.md  STYLE_GUIDE.md  UI_VISION.md  USER_PERSONAS.md  WORKFLOW.md
docs/adr/: 000-template.md  001-onion-architecture.md  002-database-strategy.md  003-llama-cpp-over-ollama.md  004-streamlit-for-ui.md  005-development-approach.md  006-adopt-screaming-architecture.md  007-mvp-performance-baseline.md  008-mvp-rag-pipeline-design.md  009-performance-optimization-strategy.md  010-refactor-domain-model-to-assistant-nomenclature.md  011-relational-and-de-duplicated-content-model.md  012-the-tox-driven-quality-assurance-strategy.md  013-ai-model-selection-for-mvp.md  014-adapt-development-approach-for-solo-workflow.md  015-refactoring-to-tutor-model.md  016-refactoring-from-enrollment-entity.md  017-the-chat-orchestrator-pattern.md  018-global-role-based-authorization.md  019-centralized-api-error-handling-strategy.md  020-pivot-frontend-to-fastapi-htmx.md  020-restful-api-desgn.md  020-restful-api-design.md  021-composition-root-architecture.md  021-hexagon-and-composition-architecture.md  021-pivot-frontend-to-fastapi-htmx.md  022-hexagon-and-composition-architecture.md
docs/research/: dependency_analysis.md
scripts/: benchmark_rag.py  demo_rag.py  download_assets.sh  manage_roles.py  reset_password.py  verify_models.py
scripts/helpers/: asset_reader.py
src/: app.py  config.py
src/ai/: dependencies.py
src/api/: modules.py
src/api/ai/: dependencies.py
src/api/auth/: dependencies.py
src/api/chat/: dependencies.py
src/api/core/: app.py  dependencies.py  main.py  modules.py
src/api/rag/: dependencies.py
src/api/tutor/: dependencies.py
src/application/: errors.py  exceptions.py  protocols.py
src/application/services/: auth_service.py
src/assistant/: dependencies.py
src/auth/: dependencies.py
src/auth/application/: exceptions.py  protocols.py
src/auth/domain/: models.py  schemas.py
src/chat/: dependencies.py
src/chat/domain/: models.py
src/core/: app.py  config.py  dependencies.py  exceptions.py  modules.py
src/core/domain/: config.py  errors.py
src/core/infrastructure/: app.py  database.py  limiter.py  (+3 more)
src/domain/: models.py
src/infrastructure/: database.py  security.py  settings.py
src/rag/: dependencies.py
src/tutor/: dependencies.py
src/ui/: dependencies.py  modules.py  utils.py
tests/: conftest.py  helpers.py
tests/application/: test_auth_service.py
tests/core/: test_exception_handler.py
tests/e2e/: test_security.py  test_security_flow.py  test_user_flow.py
(+432 files in other folders)
