[project]
name = "ProVAI"
version = "0.1.0"
description = "A RAG-powered educational tutor"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [{ name = "Joel Abreu Rojas", email = "joelabreurojas@gmail.com" }]
dependencies = [
  "alembic>=1.16.2",
  "chromadb>=1.0.15",
  "fastapi>=0.116.0",
  "langchain-chroma>=0.2.5",
  "langchain-community>=0.3.27",
  "langchain-core>=0.3.68",
  "langchain-huggingface>=0.3.1",
  "langchain>=0.3.26",
  "langgraph>=0.5.1",
  "langsmith>=0.4.4",
  "llama-cpp-python>=0.3.12",
  "passlib[bcrypt]>=1.7.4",
  "psutil>=7.0.0",
  "pydantic-settings>=2.10.1",
  "pydantic[email]>=2.11.7",
  "pypdf>=5.7.0",
  "python-jose[cryptography]>=3.5.0",
  "sentence-transformers>=5.0.0",
  "slowapi>=0.1.9",
  "sqlalchemy>=2.0.41",
  "tavily-python>=0.7.9",
  "uvicorn[standard]>=0.35.0",
  "uvloop>=0.21.0",
]

[project.optional-dependencies]
ci = [
  "tox>=4.27.0",
  "tox-uv>=1.26.1",
]
quality = [
  "mypy>=1.16.1",
  "ruff>=0.12.2",
]
test = [
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
  "pytest-mock>=3.14.1",
  "httpx>=0.28.1",
]

[dependency-groups]
dev = [
  "ProVAI[ci]",
  "ProVAI[quality]",
  "ProVAI[test]",
]

[tool.coverage.ini_options]
addopts = "--cov=src --cov-report=term-missing -v"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = [
  "src/main.py",
  "src/domain/models.py",
  "src/config.py",
  "src/infrastructure/settings.py",
  "*/__init__.py",
]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
ignore_errors = true
precision = 2

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_reexport = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
